--- a/.env
+++ b/.env
@@ -20,14 +20,14 @@ langchain_project='chatbot-self-service'
 
 
 #snowflake
-user="rajapandi"
-password="Optisol2020"
-account="RGA00664"
-port=443
-warehouse="CORTEX_ANALYST_WH"
-role="ACCOUNTADMIN"
-HOST = "bkmvtdf-rga00884.snowflakecomputing.com"
-DATABASE = "RETAIL_ANALYTICS"
-SCHEMA = "PUBLIC"
-STAGE = "RETAIL_STAGE"
-FILE = "database_schema.yaml"
+s_user="rajapandi"
+s_password="Optisol2020"
+s_account="bkmvtdf-rga00884"
+s_port=443
+s_warehouse="CORTEX_ANALYST_WH"
+s_role="ACCOUNTADMIN"
+s_HOST = "bkmvtdf-rga00884.snowflakecomputing.com"
+s_DATABASE = "RETAIL_ANALYTICS"
+s_SCHEMA = "PUBLIC"
+s_STAGE = "RETAIL_STAGE"
+s_FILE = "database_schema.yaml"
